# waybar-issues

./: .gitignore  .goreleaser.yaml  BUILD.bazel  Makefile  README.md  WORKSPACE.bazel  config.example  config.go  deps.bzl  github.go  gitlab.go  go.mod  go.sum  main.go
.github/workflows/: codeql-analysis.yml  main.yaml  release.yaml  tests.yaml
config/: BUILD.bazel  config.go  config.test  config_test.go  invalid_config.test
provider/: BUILD.bazel  github.go  github_test.go  gitlab.go  gitlab_test.go  trello.go  types.go
