load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/andresterba/waybar-issues
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
        "-build_file_proto_mode=disable_global",
    ],
    command = "update-repos",
)

go_library(
    name = "waybar-issues_lib",
    srcs = ["main.go"],
    importpath = "github.com/andresterba/waybar-issues",
    visibility = ["//visibility:private"],
    deps = [
        "//config",
        "//provider",
    ],
)

go_binary(
    name = "waybar-issues",
    embed = [":waybar-issues_lib"],
    visibility = ["//visibility:public"],
)
